--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                 </ul>
             </ul>
             <div class="shadow">
-                <img src="img/qr.png" alt="qr">
-                <img src="img/rfid.png" alt="rfid">
+                <div class="qrfid">
+                    <img class="qr" src="img/qr.png" alt="qr">
+                    <img class="rfid" src="img/rfid.png" alt="rfid">
+                </div>
                 <p>Вам стало плохо, потеряли сознание, упали. Медицинский браслет </p>
                 <p>С технологией QR и RFID</p>
             </div>
