--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
 <header class="header">
 	<div class="logo-nav">
 		<div class="logo">
-			<img src="img/logo.png" alt="logo">
+			<img class="medid_logo" src="img/logo.png" alt="logo">
 		</div>
 		<nav class="menu">
-			<ul>
+			<ul class="menu-nav">
 				<li><a href="#">О Med ID</a></li>
-				<li><a href="#"><img src="img/noun_Login_1038293.png" alt="login">Войти</a></li>
+				<li><a href="#"><img src="img/noun_Login_1038293.png" alt="">Войти</a></li>
 			</ul>
-			<ul>
+			<ul class="menu-lang">
 				<li><a href="#" class="lang">KZ</a></li>
-				<li><a href="#" class="lang">RU</a></li>
-				<li><a href="#" class="lang">EN</a></li>
+				<li><a  href="#" class="lang">RU</a></li>
 			</ul>
 		</nav>
 	</div>
