--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<nav class="menu">
 			<ul class="menu-nav">
 				<li><a href="#">О Med ID</a></li>
-				<li><a href="#"><img src="img/noun_Login_1038293.png" alt="">Войти</a></li>
+				<li><a class="login" href="#"><img src="img/noun_Login_1038293.png" alt="login">Войти</a></li>
 			</ul>
 			<ul class="menu-lang">
 				<li><a href="#" class="lang">KZ</a></li>
