--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</div>
 		<nav class="menu">
 			<ul class="menu-nav">
-				<li><a href="#">О Med ID</a></li>
+				<li><a class="info" href="#">О Med ID</a></li>
 				<li><a class="login" href="#"><img src="img/noun_Login_1038293.png" alt="login">Войти</a></li>
 			</ul>
 			<ul class="menu-lang">
