--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
 		</nav>
 	</div>
 	<div class="bangle">
-		<h2 class="qr">QR</h2>
-		<h2 class="rfid">RFID</h2>
-		<img src="img/qr.png" alt="qr" class="bangle_qr">
-		<img src="img/rfid.png" alt="rfid" class="bangle_rfid">
+		<div class="bangle-img">
+			<h2 class="qr">QR<img src="img/qr.png" alt="qr" class="bangle_qr"></h2>
+			<h2 class="rfid">RFID<img src="img/rfid.png" alt="rfid" class="bangle_rfid"></h2>
+		</div>
+	</div>
 		<h3>Вам стало плохо, потеряли сознание, упали. Медицинский браслет подскажет, какая вам нужна помощь</h3>
 		<h3>С технологией QR и RFID</h3>
 	</div>
