--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 </head>
 <body>
 
-
-<header class="header">
-	<div class="logo-nav">
+	<header class="header">
+		<div class="logo-nav">
 		<div class="logo">
 			<img class="medid_logo" src="img/logo.png" alt="logo">
 		</div>
@@ -27,124 +26,128 @@
 				<li><a  href="#" class="lang">RU</a></li>
 			</ul>
 		</nav>
-	</div>
-	<div class="bangle">
-		<div class="bangle-img">
-			<h2 class="qr">QR<img src="img/qr.png" alt="qr" class="bangle_qr"></h2>
-			<h2 class="rfid">RFID<img src="img/rfid.png" alt="rfid" class="bangle_rfid"></h2>
 		</div>
-	</div>
-		<h3>Вам стало плохо, потеряли сознание, упали. Медицинский браслет подскажет, какая вам нужна помощь</h3>
-		<h3>С технологией QR и RFID</h3>
-	</div>
-	<div class="logo_medid">
-		<img src="img/medid.png" alt="logomedid">
-	</div>
-	<div class="title">
-		<h1>СИСТЕМА МОНИТОРИНГА ПАЦИЕНТОВ</h1>
-	</div>
-	<button class="order">Заказать</button>
-</header>
+		<div class="container-bangle">
+
+			<div class="bangle">
+				<div class="bangle-img">
+					<img src="img/QR.png" alt="qr" class="bangle_qr">
+					<img src="img/RFID.png" alt="rfid" class="bangle_rfid">
+				</div>
+				<h3>Вам стало плохо, потеряли сознание, упали. Медицинский браслет подскажет, какая вам нужна помощь</h3>
+				<h3>С технологией QR и RFID</h3>
+			</div>
+			<div class="logo-title">
+				<img class="logo_medid" src="img/medid.png" alt="logomedid">
+			</div>
+			<div class="title">
+				<h1>СИСТЕМА МОНИТОРИНГА ПАЦИЕНТОВ</h1>
+			</div>
+			<button class="order">Заказать</button>
+		</div>
+
+	</header>
 
 
-<div class="main">
-	<h2 class="main-title">Современный медицинский идентификатор пациента</h2>
-	<div class="acces">
-		<img src="" alt="">
-		<h3>Мгновенный доступ</h3>
-		<p>Используя систему Med ID вы мгновенно получаете информацию о пациенте, его заболевании, а также
-			рекомендациям к оказанию первой медицинской помощи</p>
-	</div>
-	<div class="story">
-		<img src="" alt="">
-		<h3>История обращений</h3>
-		<p>Ваш лечащий врач получает доступ к полной истории обращений в лечебные учереждения, назначений и лечебных
-			процедур</p>
-	</div>
-	<div class="alert">
-		<img src="" alt="">
-		<h3>Оповещение родных</h3>
-		<p>При сканировании QR-кода браслета данные о считывании мгновенно передаются вашим доверенным лицам вместе
-			с контактной информацией человека, который оказал помощь</p>
-	</div>
-	<h2>Кому будет полезно</h2>
-	<div class="info">
-		<div class="info-block1">
-			<img src="" alt="" class="info-block">
+	<div class="main">
+		<h2 class="main-title">Современный медицинский идентификатор пациента</h2>
+		<div class="acces">
 			<img src="" alt="">
-			<h3>Людям с хроническими заболеваниями</h3>
-			<button><img src="" alt=""></button>
-			<p>
-				Хронические заболевания могут поставить под угрозу жизнь человека в любое время.
-				А какую помощь нужно оказать в случае обострения болезни зачастую знают лишь близкие.
-				Но теперь вам точно смогут помочь. Считав QR-код с браслета, тот, кто окажется рядом,
-				получит информацию о вас, ваших близких и доверенных лицах и сможет оказать первую неотложную
-				помощь.
-				И тем самым спасет вам жизнь. Нужен ли вам этот браслет, решайте сами.
-				Но не забывайте поговорку «Береженного Бог бережет».
-			</p>
+			<h3>Мгновенный доступ</h3>
+			<p>Используя систему Med ID вы мгновенно получаете информацию о пациенте, его заболевании, а также
+				рекомендациям к оказанию первой медицинской помощи</p>
 		</div>
-		<div class="info-block2">
-			<img src="" alt="" class="info-block">
+		<div class="story">
 			<img src="" alt="">
-			<h3>Пожилым людям</h3>
-			<button><img src="" alt=""></button>
-			<p>
-				С возрастом человек становится все более уязвимым. Если вы хоть раз слышали или читали о стариках,
-				которые заблудились, потеряли память и не могут найти свой дом и вспомнить телефоны родных,
-				позаботьтесь о своих родителях, бабушках и дедушках. Медицинский браслет поможет вашим родным не
-				оказаться в затруднительной ситуации.
-				Считав QR-код с браслета, любой человек может связаться с близкими и, в случае необходимости,
-				передать данные о пострадавшем в службу скорой помощи. Сегодня мы заботимся о наших родителях,
-				завтра о нас позаботятся наши дети.
-			</p>
+			<h3>История обращений</h3>
+			<p>Ваш лечащий врач получает доступ к полной истории обращений в лечебные учереждения, назначений и лечебных
+				процедур</p>
 		</div>
-		<div class="info-block3">
-			<img src="" alt="" class="info-block">
+		<div class="alert">
 			<img src="" alt="">
-			<h3>Детям</h3>
-			<button><img src="" alt=""></button>
-			<p>
-				Мы не можем находиться с детьми 24/7. Но мы можем обеспечить безопасность своего чада, даже когда
-				нас нет рядом.
-				Если ребенок потерялся в большом торговом центре, любой прохожий может отсканировать QR-код
-				браслета, связаться с вами и помочь встретиться.
-				Если же ваш ребенок, к примеру, получит травму на детской площадке, или ему станет плохо на улице и
-				потребуется врачебная помощь,
-				браслет расскажет, какая у него группа крови, на что аллергия, есть ли хронические заболевания.
-				Эти факторы могут оказаться решающими при оказании первой помощи.
-			</p>
+			<h3>Оповещение родных</h3>
+			<p>При сканировании QR-кода браслета данные о считывании мгновенно передаются вашим доверенным лицам вместе
+				с контактной информацией человека, который оказал помощь</p>
 		</div>
-		<div class="info-block4">
-			<img src="" alt="" class="info-block">
+		<h2>Кому будет полезно</h2>
+		<div class="info">
+			<div class="info-block1">
+				<img src="" alt="" class="info-block">
+				<img src="" alt="">
+				<h3>Людям с хроническими заболеваниями</h3>
+				<button><img src="" alt=""></button>
+				<p>
+					Хронические заболевания могут поставить под угрозу жизнь человека в любое время.
+					А какую помощь нужно оказать в случае обострения болезни зачастую знают лишь близкие.
+					Но теперь вам точно смогут помочь. Считав QR-код с браслета, тот, кто окажется рядом,
+					получит информацию о вас, ваших близких и доверенных лицах и сможет оказать первую неотложную
+					помощь.
+					И тем самым спасет вам жизнь. Нужен ли вам этот браслет, решайте сами.
+					Но не забывайте поговорку «Береженного Бог бережет».
+				</p>
+			</div>
+			<div class="info-block2">
+				<img src="" alt="" class="info-block">
+				<img src="" alt="">
+				<h3>Пожилым людям</h3>
+				<button><img src="" alt=""></button>
+				<p>
+					С возрастом человек становится все более уязвимым. Если вы хоть раз слышали или читали о стариках,
+					которые заблудились, потеряли память и не могут найти свой дом и вспомнить телефоны родных,
+					позаботьтесь о своих родителях, бабушках и дедушках. Медицинский браслет поможет вашим родным не
+					оказаться в затруднительной ситуации.
+					Считав QR-код с браслета, любой человек может связаться с близкими и, в случае необходимости,
+					передать данные о пострадавшем в службу скорой помощи. Сегодня мы заботимся о наших родителях,
+					завтра о нас позаботятся наши дети.
+				</p>
+			</div>
+			<div class="info-block3">
+				<img src="" alt="" class="info-block">
+				<img src="" alt="">
+				<h3>Детям</h3>
+				<button><img src="" alt=""></button>
+				<p>
+					Мы не можем находиться с детьми 24/7. Но мы можем обеспечить безопасность своего чада, даже когда
+					нас нет рядом.
+					Если ребенок потерялся в большом торговом центре, любой прохожий может отсканировать QR-код
+					браслета, связаться с вами и помочь встретиться.
+					Если же ваш ребенок, к примеру, получит травму на детской площадке, или ему станет плохо на улице и
+					потребуется врачебная помощь,
+					браслет расскажет, какая у него группа крови, на что аллергия, есть ли хронические заболевания.
+					Эти факторы могут оказаться решающими при оказании первой помощи.
+				</p>
+			</div>
+			<div class="info-block4">
+				<img src="" alt="" class="info-block">
+				<img src="" alt="">
+				<h3>Путешественникам</h3>
+				<button><img src="" alt=""></button>
+				<p>
+					Не нужно больше переживать, что вы плохо знаете язык той страны, куда собираетесь поехать.
+					Ваш браслет все скажет за вас. В случае, если вам придется обратиться в медучреждение за рубежом,
+					Med ID сообщит о том, кто вы, какие у вас хронические заболевания, на что бывают аллергические
+					реакции, если ли у вас медицинская страховка.
+					Позаботьтесь о себе в путешествии. И вы точно сможете донести до врача необходимую информацию, даже
+					если не владеете языком.
+				</p>
+			</div>
+		</div>
+		<div class="foto">
 			<img src="" alt="">
-			<h3>Путешественникам</h3>
-			<button><img src="" alt=""></button>
-			<p>
-				Не нужно больше переживать, что вы плохо знаете язык той страны, куда собираетесь поехать.
-				Ваш браслет все скажет за вас. В случае, если вам придется обратиться в медучреждение за рубежом,
-				Med ID сообщит о том, кто вы, какие у вас хронические заболевания, на что бывают аллергические
-				реакции, если ли у вас медицинская страховка.
-				Позаботьтесь о себе в путешествии. И вы точно сможете донести до врача необходимую информацию, даже
-				если не владеете языком.
-			</p>
+			<img src="" alt="">
+			<img src="" alt="">
+			<img src="" alt="">
+			<img src="" alt="">
+			<img src="" alt="">
 		</div>
 	</div>
-	<div class="foto">
-		<img src="" alt="">
-		<img src="" alt="">
-		<img src="" alt="">
-		<img src="" alt="">
-		<img src="" alt="">
-		<img src="" alt="">
-	</div>
-</div>
 
 
-<div class="footer">
-	<img src="" alt="" class="logo-footer">
-	<h4>2018</h4>
-	<a href="mailto:info@medid.kz">info@medid.kz</a>
+	<div class="footer">
+		<img src="" alt="" class="logo-footer">
+		<h4>2018</h4>
+		<a href="mailto:info@medid.kz">info@medid.kz</a>
+
 </div>
 </body>
 </html>
