--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport"
-	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
 	<title>Medid</title>
 </head>
 <body>
@@ -34,16 +34,20 @@
 					<img src="img/QR.png" alt="qr" class="bangle_qr">
 					<img src="img/RFID.png" alt="rfid" class="bangle_rfid">
 				</div>
-				<h3>Вам стало плохо, потеряли сознание, упали. Медицинский браслет подскажет, какая вам нужна помощь</h3>
-				<h3>С технологией QR и RFID</h3>
+				<div class="promo">
+					<h3>Вам стало плохо, потеряли сознание, упали. Медицинский браслет подскажет, какая вам нужна помощь</h3>
+					<h3><span>С технологией QR и RFID</span></h3>
+				</div>
 			</div>
 			<div class="logo-title">
 				<img class="logo_medid" src="img/medid.png" alt="logomedid">
+
 			</div>
 			<div class="title">
 				<h1>СИСТЕМА МОНИТОРИНГА ПАЦИЕНТОВ</h1>
+				<button class="order">Заказать</button>
 			</div>
-			<button class="order">Заказать</button>
+
 		</div>
 
 	</header>
