--- a/index.html
+++ b/index.html
@@ -54,24 +54,47 @@
 
 
 	<div class="main">
-		<h2 class="main-title">Современный медицинский идентификатор пациента</h2>
-		<div class="acces">
-			<img src="" alt="">
-			<h3>Мгновенный доступ</h3>
-			<p>Используя систему Med ID вы мгновенно получаете информацию о пациенте, его заболевании, а также
-				рекомендациям к оказанию первой медицинской помощи</p>
-		</div>
-		<div class="story">
-			<img src="" alt="">
-			<h3>История обращений</h3>
-			<p>Ваш лечащий врач получает доступ к полной истории обращений в лечебные учереждения, назначений и лечебных
-				процедур</p>
-		</div>
-		<div class="alert">
-			<img src="" alt="">
-			<h3>Оповещение родных</h3>
-			<p>При сканировании QR-кода браслета данные о считывании мгновенно передаются вашим доверенным лицам вместе
-				с контактной информацией человека, который оказал помощь</p>
+		<div class="main_info">
+			<h2 class="main-title">Современный медицинский идентификатор пациента</h2>
+				<div class="info_bangle">
+					<div class="access container_info">
+						<img src="img/access.png" alt="access">
+						<h3>Мгновенный доступ</h3>
+						<p>Используя систему Med ID вы
+						мгновенно получаете информацию
+						о пациенте, его заболевании,
+						а также рекомендациям к оказанию
+						первой медицинской помощи</p>
+					</div>
+					<div class="heart_rate">
+						<img src="img/heart_rate.png" alt="heart">
+					</div>
+					<div class="story container_info">
+						<img src="img/story.png" alt="story">
+						<h3>История обращений</h3>
+						<p>Ваш лечащий врач получает
+							доступ к полной истории
+							обращений в лечебные учереждения,
+							назначений и лечебных
+							процедур</p>
+					</div>
+					<div class="heart_rate">
+						<img src="img/heart_rate.png" alt="heart">
+					</div>
+					<div class="alert container_info">
+						<img src="img/alert.png" alt="alert">
+						<h3>Оповещение родных</h3>
+						<p>При сканировании QR-кода
+							браслета данные о считывании
+							мгновенно передаются вашим
+							доверенным лицам вместе
+							с контактной информацией
+							человека, который оказал помощь</p>
+					</div>
+					<div>
+						<img class="bangle_black" src="img/bandle_black.png" alt="bandle_black">
+					</div>
+				</div>
 		</div>
 		<h2>Кому будет полезно</h2>
 		<div class="info">
