--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 			<div class="bangle">
 				<div class="bangle-img">
-					<img src="img/QR.png" alt="qr" class="bangle_qr">
-					<img src="img/RFID.png" alt="rfid" class="bangle_rfid">
+					<img src="img/qr.png" alt="qr" class="bangle_qr">
+					<img src="img/rfid.png" alt="rfid" class="bangle_rfid">
 				</div>
 				<div class="promo">
 					<h3>Вам стало плохо, потеряли сознание, упали. Медицинский браслет подскажет, какая вам нужна помощь</h3>
