--- a/index.html
+++ b/index.html
@@ -29,9 +29,21 @@
 					</ul>
 				</div>
 			</div>
-
+			<div class="info-block">
+				<div class="block-bangle">
+					<div class="bangle">
+					<h2>QR</h2>
+					</div>
+					<img src="img/qr.png" alt="qr">
+				</div>
+				<div class="block-bangle">
+					<div class="bangle">
+					<h2>RFID</h2>
+					</div>
+					<img src="img/rfid.png" alt="rfid">
+				</div>
+			</div>
 		</div>
-
 	</header>
 
 </body>
