Немного исправил разметку и код css

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 			</div>
 			<div class="info-block">
 				<div class="block-bangle">
-					<div class="bangle">
-					<h2>QR</h2>
-					</div>
+<!--					<div class="bangle">-->
+					<h2 class="bangle1" >QR</h2>
+<!--					</div>-->
 					<img src="img/qr.png" alt="qr">
 				</div>
 				<div class="block-bangle">
