--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					</ul>
 				</div>
 			</div>
+			<div class="bg"></div>
 			<div class="info-block">
 				<div class="block-bangle">
 <!--					<div class="bangle">-->
@@ -38,7 +39,7 @@
 				</div>
 				<div class="block-bangle">
 					<div class="bangle">
-					<h2>RFID</h2>
+						<h2>RFID</h2>
 					</div>
 					<img src="img/rfid.png" alt="rfid">
 				</div>
