--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 			</div>
 			<div class="info-block">
 				<div class="bg"></div>
+				<div class="bangles">
+					<div class="bangle">
+						<h2 class="qr-title">QR</h2>
+						<img class="bangle-image" src="img/qr.png" alt="qr">
+					</div>
+				</div>
+
 			</div>
 
 		</div>
