--- a/index.html
+++ b/index.html
@@ -33,11 +33,32 @@
 				<div class="bg"></div>
 				<div class="bangles">
 					<div class="bangle">
-						<h2 class="qr-title">QR</h2>
-						<img class="bangle-image" src="img/qr.png" alt="qr">
+						<h2 class="title-item">QR</h2>
+						<div class="bangle-image">
+							<img  src="img/qr.png" alt="qr">
+						</div>
+					</div>
+					<div class="bangle">
+						<h2 class="title-item">RFID</h2>
+						<div class="bangle-image">
+							<img  src="img/rfid.png" alt="qr">
+						</div>
 					</div>
 				</div>
+				<div class="description">
+					<p>Вам стало плохо, потеряли сознание, упали.
+						Медицинский браслет подскажет,
+						какая вам нужна помощь</p>
+					<p><span>С технологией QR и RFID</span></p>
+				</div>
+			</div>
+			<div class="sale">
+				<div class="medid">
+					<img class="" src="img/medid.png" alt="medid">
+				</div>
 
+				<h1 class="headline">система мониторинга пациентов</h1>
+				<button class="btn">Заказать</button>
 			</div>
 
 		</div>
