--- a/index.html
+++ b/index.html
@@ -56,12 +56,42 @@
 				<div class="medid">
 					<img class="" src="img/medid.png" alt="medid">
 				</div>
-
 				<h1 class="headline">система мониторинга пациентов</h1>
 				<button class="btn">Заказать</button>
 			</div>
 		</div>
 	</header>
+	<div class="content">
+		<div class="container">
+			<h2 class="modern">Cовременный медицинский идентификатор пациента</h2>
+			<div class="advantages">
+				<div class="promo-block">
+					<div><img src="img/access.png" alt="access"></div>
+					<span>Мгновенный доступ</span>
+					<p>Используя систему Med ID Вы мгновенно
+						получаете информацию о пациенте, его
+						заболевании, а также рекомендациям к
+						оказанию первой медицинской помощи</p>
+				</div>
+				<div class="promo-block">
+					<div><img src="img/story.png" alt="access"></div>
+					<span>История обращений</span>
+					<p>Ваш лечащий врач получает доступ к вашей
+						полной истории обращений в лечебные
+						учереждения, назначений
+						и лечебных процедур</p>
+				</div>
+				<div class="promo-block">
+					<div><img src="img/alert.png" alt="access"></div>
+					<span>Мгновенный доступ</span>
+					<p>При считывании данных браслета данные
+						о считывании мгновенно передаются Вашим
+						доверенным лицам, с передачей контактной
+						информацией считавшего браслет</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
