--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap&subset=cyrillic" rel="stylesheet">
-	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
 	<title>Medid</title>
 </head>
 <body>
@@ -73,8 +72,8 @@
 						заболевании, а также рекомендациям к
 						оказанию первой медицинской помощи</p>
 				</div>
-				<div class="promo-block">
-					<div><img src="img/story.png" alt="access"></div>
+				<div class="promo-block heartrate">
+					<div class="story"><img src="img/story.png" alt="access"></div>
 					<span>История обращений</span>
 					<p>Ваш лечащий врач получает доступ к вашей
 						полной истории обращений в лечебные
