--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<div class="advantages">
 				<div class="promo-block">
 					<div><img src="img/access.png" alt="access"></div>
-					<span>Мгновенный доступ</span>
+					<h3>Мгновенный доступ</h3>
 					<p>Используя систему Med ID Вы мгновенно
 						получаете информацию о пациенте, его
 						заболевании, а также рекомендациям к
@@ -74,7 +74,7 @@
 				</div>
 				<div class="promo-block heartrate">
 					<div class="story"><img src="img/story.png" alt="access"></div>
-					<span>История обращений</span>
+					<h3>История обращений</h3>
 					<p>Ваш лечащий врач получает доступ к вашей
 						полной истории обращений в лечебные
 						учереждения, назначений
@@ -82,7 +82,7 @@
 				</div>
 				<div class="promo-block">
 					<div><img src="img/alert.png" alt="access"></div>
-					<span>Мгновенный доступ</span>
+					<h3>Мгновенный доступ</h3>
 					<p>При считывании данных браслета данные
 						о считывании мгновенно передаются Вашим
 						доверенным лицам, с передачей контактной
