--- a/index.html
+++ b/index.html
@@ -89,6 +89,32 @@
 						информацией считавшего браслет</p>
 				</div>
 			</div>
+			<h2 class="form">Кому мы полезны</h2>
+			<div class="about-bungle">
+				<div class="for-whom">
+					<div><img src="img/md.png" alt=""></div>
+					<div class="about-from">
+						<h3>Людям с хроническими заболеваниями</h3>
+						<button class="arrow"><img src="img/btn.png" alt="btn"></button>
+					</div>
+
+				</div>
+				<div class="for-whom">
+					<div><img src="img/md.png" alt=""></div>
+					<h3>Людям с хроническими заболеваниями</h3>
+				</div>
+				<div class="for-whom">
+					<div><img src="img/md.png" alt=""></div>
+					<h3>Людям с хроническими заболеваниями</h3>
+				</div>
+				<div class="for-whom">
+					<div><img src="img/md.png" alt=""></div>
+					<h3>Людям с хроническими заболеваниями</h3>
+				</div>
+			</div>
+		</div>
+		<div class="black-bangle">
+			<img src="img/bandle_black.png" alt="black">
 		</div>
 	</div>
 
