--- a/index.html
+++ b/index.html
@@ -92,30 +92,68 @@
 			<h2 class="form">Кому мы полезны</h2>
 			<div class="about-bungle">
 				<div class="for-whom">
-					<div><img src="img/md.png" alt=""></div>
-					<div class="about-from">
-						<h3>Людям с хроническими заболеваниями</h3>
-						<button class="arrow"><img src="img/btn.png" alt="btn"></button>
+					<img src="img/md.png" alt="md">
+					<div class="info">
+						<div class="about-from">
+							<div><img src="img/heart.png" alt="heart"></div>
+							<h3>Людям с хроническими заболеваниями</h3>
+							<div><img src="img/btn.png" alt="btn"></div>
+						</div>
 					</div>
 				</div>
 				<div class="for-whom">
-					<div><img src="img/md.png" alt=""></div>
-					<h3>Людям с хроническими заболеваниями</h3>
+					<img src="img/old.png" alt="old">
+					<div class="info">
+						<div class="about-from">
+							<div><img src="img/Medicine.png" alt="Medicine"></div>
+							<h3>Людям с хроническими заболеваниями</h3>
+							<div><img src="img/btn.png" alt="btn"></div>
+						</div>
+					</div>
 				</div>
 				<div class="for-whom">
-					<div><img src="img/md.png" alt=""></div>
-					<h3>Людям с хроническими заболеваниями</h3>
+					<img src="img/kids.png" alt="">
+					<div class="info">
+						<div class="about-from">
+							<div><img src="img/Family.png" alt="Family"></div>
+							<h3>Людям с хроническими заболеваниями</h3>
+							<div><img src="img/btn.png" alt="btn"></div>
+						</div>
+					</div>
 				</div>
 				<div class="for-whom">
-					<div><img src="img/md.png" alt=""></div>
-					<h3>Людям с хроническими заболеваниями</h3>
+					<img src="img/all.png" alt="">
+					<div class="info">
+						<div class="about-from">
+							<div><img src="img/Earth.png" alt="earth"></div>
+							<h3>Людям с хроническими заболеваниями</h3>
+							<div><img src="img/btn.png" alt="btn"></div>
+						</div>
+					</div>
 				</div>
 			</div>
+				<ul class="scroll">
+					<li><img src="img/1.png" alt="1"></li>
+					<li><img src="img/2.png" alt="1"></li>
+					<li><img src="img/3.png" alt="1"></li>
+					<li><img src="img/4.png" alt="1"></li>
+					<li><img src="img/5.png" alt="1"></li>
+					<li><img src="img/6.png" alt="1"></li>
+				</ul>
 		</div>
 		<div class="black-bangle">
 			<img src="img/bandle_black.png" alt="black">
 		</div>
+		<div class="red-bangle">
+			<img src="img/bandle_red.png" alt="red">
+		</div>
 	</div>
-
+	<footer class="footer-container">
+		<div class="footer">
+			<div><img src="img/footer_logo.png" alt="footer"></div>
+			<h3>©2018</h3>
+			<a href="mailto:info@madid.kz">info@madid.kz</a>
+		</div>
+	</footer>
 </body>
 </html>
