--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<div class="about-from">
 							<div><img src="img/heart.png" alt="heart"></div>
 							<h3>Людям с хроническими заболеваниями</h3>
-							<div><img src="img/btn.png" alt="btn"></div>
+							<div><img class="btn-info" src="img/btn.png" alt="btn"></div>
 						</div>
 					</div>
 				</div>
@@ -106,7 +106,7 @@
 					<div class="info">
 						<div class="about-from">
 							<div><img src="img/Medicine.png" alt="Medicine"></div>
-							<h3>Людям с хроническими заболеваниями</h3>
+							<h3>Пожилие люди</h3>
 							<div><img src="img/btn.png" alt="btn"></div>
 						</div>
 					</div>
@@ -116,7 +116,7 @@
 					<div class="info">
 						<div class="about-from">
 							<div><img src="img/Family.png" alt="Family"></div>
-							<h3>Людям с хроническими заболеваниями</h3>
+							<h3>Дети</h3>
 							<div><img src="img/btn.png" alt="btn"></div>
 						</div>
 					</div>
@@ -126,7 +126,7 @@
 					<div class="info">
 						<div class="about-from">
 							<div><img src="img/Earth.png" alt="earth"></div>
-							<h3>Людям с хроническими заболеваниями</h3>
+							<h3>Иностранные граждане</h3>
 							<div><img src="img/btn.png" alt="btn"></div>
 						</div>
 					</div>
