--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 						<li><a href="#" class="lang-select">EN</a></li>
 					</ul>
 				</div>
+				<button class="scan">Сканировать</button>
 			</div>
 			<div class="info-block">
 				<div class="bg"></div>
