--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
 					</div>
 				</div>
 			</div>
+			<!--Блок ниже очень плохо! Картинки загружать через список ul и li мне кажется не самая лучшая идея
+			Название класса не понятное, почем скролл? Название для файлов желательно не начинать с цифр, Альты должны быть разные
+			Этот блок передалай
+			Попробуй этот блок сделать двумя способами где загрузка картинки через фон и имиджем
+			Вообще есть правило, если ты не собиарешься менять контент то его надо загружать фоном.
+			Если ты собираешься менять контент из CMS (WordPress, Битрикс и т.д.) то тогда однозначно через html-->
 				<ul class="scroll">
 					<li><img src="img/1.png" alt="1"></li>
 					<li><img src="img/2.png" alt="1"></li>
