--- a/index.html
+++ b/index.html
@@ -139,14 +139,22 @@
 			Попробуй этот блок сделать двумя способами где загрузка картинки через фон и имиджем
 			Вообще есть правило, если ты не собиарешься менять контент то его надо загружать фоном.
 			Если ты собираешься менять контент из CMS (WordPress, Битрикс и т.д.) то тогда однозначно через html-->
-				<div class="inline-image">
-					<img src="img/a.png" alt="a">
-					<img src="img/b.png" alt="b">
-					<img src="img/c.png" alt="c">
-					<img src="img/d.png" alt="d">
-					<img src="img/e.png" alt="e">
-					<img src="img/f.png" alt="f">
-				</div>
+			<div class="inline-image">
+				<div class="image-item item-1"></div>
+				<div class="image-item item-2"></div>
+				<div class="image-item item-3"></div>
+				<div class="image-item item-4"></div>
+				<div class="image-item item-5"></div>
+				<div class="image-item item-6"></div>
+			</div>
+			<!--<div class="inline-image">-->
+					<!--<img src="img/a.png" alt="a">-->
+					<!--<img src="img/b.png" alt="b">-->
+					<!--<img src="img/c.png" alt="c">-->
+					<!--<img src="img/d.png" alt="d">-->
+					<!--<img src="img/e.png" alt="e">-->
+					<!--<img src="img/f.png" alt="f">-->
+				<!--</div>-->
 		</div>
 		<div class="black-bangle">
 			<img src="img/bandle_black.png" alt="black">
