--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</div>
 			<div class="sale">
 				<div class="medid">
-					<img class="" src="img/medid.png" alt="medid">
+					<img class="medid-item" src="img/medid.png" alt="medid">
 				</div>
 				<h1 class="headline">система мониторинга пациентов</h1>
 				<button class="btn">Заказать</button>
