--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				</div>
 				<div class="promo-block">
 					<div><img src="img/alert.png" alt="access"></div>
-					<h3>Мгновенный доступ</h3>
+					<h3>Оповещение родных</h3>
 					<p>При считывании данных браслета данные
 						о считывании мгновенно передаются Вашим
 						доверенным лицам, с передачей контактной
@@ -108,7 +108,7 @@
 						<div class="about-from">
 							<div><img src="img/Medicine.png" alt="Medicine"></div>
 							<h3>Пожилие люди</h3>
-							<div><img src="img/btn.png" alt="btn"></div>
+							<div><img class="btn-info" src="img/btn.png" alt="btn"></div>
 						</div>
 					</div>
 				</div>
@@ -118,7 +118,7 @@
 						<div class="about-from">
 							<div><img src="img/Family.png" alt="Family"></div>
 							<h3>Дети</h3>
-							<div><img src="img/btn.png" alt="btn"></div>
+							<div><img class="btn-info" src="img/btn.png" alt="btn"></div>
 						</div>
 					</div>
 				</div>
@@ -128,7 +128,7 @@
 						<div class="about-from">
 							<div><img src="img/Earth.png" alt="earth"></div>
 							<h3>Иностранные граждане</h3>
-							<div><img src="img/btn.png" alt="btn"></div>
+							<div><img class="btn-info" src="img/btn.png" alt="btn"></div>
 						</div>
 					</div>
 				</div>
