--- a/index.html
+++ b/index.html
@@ -141,14 +141,6 @@
 				<div class="image-item item-5"></div>
 				<div class="image-item item-6"></div>
 			</div>
-			<!--<div class="inline-image">-->
-					<!--<img src="img/a.png" alt="a">-->
-					<!--<img src="img/b.png" alt="b">-->
-					<!--<img src="img/c.png" alt="c">-->
-					<!--<img src="img/d.png" alt="d">-->
-					<!--<img src="img/e.png" alt="e">-->
-					<!--<img src="img/f.png" alt="f">-->
-				<!--</div>-->
 		</div>
 		<div class="black-bangle">
 			<img src="img/bandle_black.png" alt="black">
@@ -157,7 +149,7 @@
 			<img src="img/bandle_red.png" alt="red">
 		</div>
 	</div>
-	<footer class="footer-container">
+	<footer class="container">
 		<div class="footer">
 			<div><img src="img/footer_logo.png" alt="footer"></div>
 			<h3>©2018</h3>
