--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 						</div>
 					</div>
 				</div>
+				<button class="scan">Сканировать</button>
 				<div class="description">
 					<p>Вам стало плохо, потеряли сознание, упали.
 						Медицинский браслет подскажет,
