--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 						<li><a href="#" class="login">Войти</a></li>
 					</ul>
 					<ul class="lang">
-						<li><a href="#" class="lang-select">KZ</a></li>
 						<li><a href="#" class="lang-select active">RU</a></li>
 						<li><a href="#" class="lang-select">EN</a></li>
+						<li><a href="#" class="lang-select">KZ</a></li>
 					</ul>
 				</div>
 				<button class="scan">Сканировать</button>
@@ -45,7 +45,6 @@
 						</div>
 					</div>
 				</div>
-				<button class="scan">Сканировать</button>
 				<div class="description">
 					<p>Вам стало плохо, потеряли сознание, упали.
 						Медицинский браслет подскажет,
@@ -104,12 +103,16 @@
 					</div>
 				</div>
 				<div class="for-whom">
-					<img src="img/old.png" alt="old">
+<!--					<img src="img/old.png" alt="old">-->
+					<div class="old-men for-item"></div>
 					<div class="info">
 						<div class="about-from">
+<!--							сделать через псевдоэлемент-->
 							<div><img src="img/Medicine.png" alt="Medicine"></div>
 							<h3>Пожилие люди</h3>
+							<!--сделать через псевдоэлемент-->
 							<div><img class="btn-info" src="img/btn.png" alt="btn"></div>
+							<p>Описание</p>
 						</div>
 					</div>
 				</div>
