переделываю блк for-whom

--- a/index.html
+++ b/index.html
@@ -93,46 +93,74 @@
 			<h2 class="form">Кому мы полезны</h2>
 			<div class="about-bungle">
 				<div class="for-whom">
-					<img src="img/md.png" alt="md">
+					<div class="medic for-item"></div>
 					<div class="info">
-						<div class="about-from">
-							<div><img src="img/heart.png" alt="heart"></div>
+						<div class="about-from about-from1">
 							<h3>Людям с хроническими заболеваниями</h3>
-							<div><img class="btn-info" src="img/btn.png" alt="btn"></div>
+							<p>Хронические заболевания могут поставить
+								под угрозу жизнь человека в любое время.
+								А какую помощь нужно оказать в случае
+								обострения болезни зачастую знают лишь близкие.
+								Но теперь вам точно смогут помочь. Считав QR-код с браслета,
+								тот, кто окажется рядом, получит информацию о вас,
+								ваших близких и доверенных лицах и сможет оказать
+								первую неотложную помощь. И тем самым спасет вам жизнь.
+								Нужен ли вам этот браслет, решайте сами. Но не забывайте
+								поговорку «Береженного Бог бережет».</p>
 						</div>
 					</div>
 				</div>
 				<div class="for-whom">
-<!--					<img src="img/old.png" alt="old">-->
 					<div class="old-men for-item"></div>
 					<div class="info">
-						<div class="about-from">
-<!--							сделать через псевдоэлемент-->
-							<div><img src="img/Medicine.png" alt="Medicine"></div>
+						<div class="about-from about-from2">
 							<h3>Пожилие люди</h3>
-							<!--сделать через псевдоэлемент-->
-							<div><img class="btn-info" src="img/btn.png" alt="btn"></div>
-							<p>Описание</p>
+							<p>Хронические заболевания могут поставить
+								под угрозу жизнь человека в любое время.
+								А какую помощь нужно оказать в случае
+								обострения болезни зачастую знают лишь близкие.
+								Но теперь вам точно смогут помочь. Считав QR-код с браслета,
+								тот, кто окажется рядом, получит информацию о вас,
+								ваших близких и доверенных лицах и сможет оказать
+								первую неотложную помощь. И тем самым спасет вам жизнь.
+								Нужен ли вам этот браслет, решайте сами. Но не забывайте
+								поговорку «Береженного Бог бережет».</p>
 						</div>
 					</div>
 				</div>
 				<div class="for-whom">
-					<img src="img/kids.png" alt="">
+					<div class="kids for-item"></div>
 					<div class="info">
-						<div class="about-from">
-							<div><img src="img/Family.png" alt="Family"></div>
-							<h3>Дети</h3>
-							<div><img class="btn-info" src="img/btn.png" alt="btn"></div>
+						<div class="about-from about-from3">
+							<h3>Детям</h3>
+							<p>Хронические заболевания могут поставить
+								под угрозу жизнь человека в любое время.
+								А какую помощь нужно оказать в случае
+								обострения болезни зачастую знают лишь близкие.
+								Но теперь вам точно смогут помочь. Считав QR-код с браслета,
+								тот, кто окажется рядом, получит информацию о вас,
+								ваших близких и доверенных лицах и сможет оказать
+								первую неотложную помощь. И тем самым спасет вам жизнь.
+								Нужен ли вам этот браслет, решайте сами. Но не забывайте
+								поговорку «Береженного Бог бережет».</p>
 						</div>
 					</div>
 				</div>
 				<div class="for-whom">
-					<img src="img/all.png" alt="">
+					<div class="traveler for-item"></div>
 					<div class="info">
-						<div class="about-from">
-							<div><img src="img/Earth.png" alt="earth"></div>
-							<h3>Иностранные граждане</h3>
-							<div><img class="btn-info" src="img/btn.png" alt="btn"></div>
+						<div class="about-from about-from4">
+							<h3>Путешественникам</h3>
+							<p>Хронические заболевания могут поставить
+								под угрозу жизнь человека в любое время.
+								А какую помощь нужно оказать в случае
+								обострения болезни зачастую знают лишь близкие.
+								Но теперь вам точно смогут помочь. Считав QR-код с браслета,
+								тот, кто окажется рядом, получит информацию о вас,
+								ваших близких и доверенных лицах и сможет оказать
+								первую неотложную помощь. И тем самым спасет вам жизнь.
+								Нужен ли вам этот браслет, решайте сами. Но не забывайте
+								поговорку «Береженного Бог бережет».</p>
 						</div>
 					</div>
 				</div>
