переделал блок for-whom

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					<div class="old-men for-item"></div>
 					<div class="info">
 						<div class="about-from about-from2">
-							<h3>Пожилие люди</h3>
+							<div class="next-title"><h3>Пожилие люди</h3></div>
 							<p>Хронические заболевания могут поставить
 								под угрозу жизнь человека в любое время.
 								А какую помощь нужно оказать в случае
@@ -132,7 +132,7 @@
 					<div class="kids for-item"></div>
 					<div class="info">
 						<div class="about-from about-from3">
-							<h3>Детям</h3>
+							<div class="next-title"><h3>Детям</h3></div>
 							<p>Хронические заболевания могут поставить
 								под угрозу жизнь человека в любое время.
 								А какую помощь нужно оказать в случае
@@ -150,7 +150,7 @@
 					<div class="traveler for-item"></div>
 					<div class="info">
 						<div class="about-from about-from4">
-							<h3>Путешественникам</h3>
+							<div class="next-title"><h3>Путешественникам</h3></div>
 							<p>Хронические заболевания могут поставить
 								под угрозу жизнь человека в любое время.
 								А какую помощь нужно оказать в случае
